--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -502,7 +502,7 @@
                                                                 <th rowspan="3" class="hidecolumn">ID</th>
                                                                 <th rowspan="3" class="hidecolumn">Position</th>
                                                                 <th rowspan="3">ชื่อ</th>
-                                                                <th rowspan="3">Lead</th>
+                                                                <th rowspan="3">Man Job</th>
                                                                 @*<th rowspan="3">Tech</th>
                                                                 <th rowspan="3">Safety</th>*@
                                                                 <th rowspan="3">Unit Price</th>
