--- a/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/CreateProductAdjust.cshtml
@@ -73,13 +73,13 @@
         <form id="myform">
             <ul class="form-style-1">
                 <li>
-                    <label class="label-2" >Serial Number <span class="required">*</span></label>
+                    <label class="label-2" >Serial Number</label>
                 </li>
                 <li>
-                    <input type="text" id="txtSerialNo" name="field_1" class="field-divided" placeholder="Serial" required disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#productsDialog" onclick="BrowseProducts()">
+                    <input type="text" id="txtSerialNo" name="field_1" class="field-divided" placeholder="" required disabled />&nbsp;<a href="#" data-toggle="modal" data-target="#productsDialog" onclick="BrowseProducts()">
                         <img src="@Url.Content("~/Images/search-engine.png")" class="btnimage" />
                     </a>
-                    <input type="hidden" id="hidSerialID" />
+                    <input type="hidden" id="hidProductID" />
                 </li>
                 
                 <li>
@@ -138,7 +138,9 @@
             html += '<h4 class="modal-title">Product Adjust</h4>';
             html += '</div>';
             html += '<div class="modal-body modal-body-danger">จำนวนที่ลดต้องน้อยกว่าหรือเท่ากับจำนวนที่คงเหลือ</br></br></div>';
-            html += '</div></div>';
+            html += '<div class="modal-footer">';
+            html += '<button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>';
+            html += '</div></div></div>';
             document.getElementById("ShowDialog").innerHTML = html;
             $("#txtDeduction").val(0);
         }
