--- a/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
+++ b/Alpha/AlphaMvc/Views/ProductAdjust/EditProductAdjust.cshtml
@@ -141,7 +141,9 @@
             html += '<h4 class="modal-title">Product Adjust</h4>';
             html += '</div>';
             html += '<div class="modal-body modal-body-danger">จำนวนที่ลดต้องน้อยกว่าหรือเท่ากับจำนวนที่คงเหลือ</br></br></div>';
-            html += '</div></div>';
+            html += '<div class="modal-footer">';
+            html += '<button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>';
+            html += '</div></div></div>';
             document.getElementById("ShowDialog").innerHTML = html;
             $("#txtDeduction").val(0);
         }
