--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1126,19 +1126,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1205,19 +1205,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood" class="txtGood select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood" class="txtGood controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost" class="txtLost select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost" class="txtLost controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair" class="txtRepair select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair" class="txtRepair controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad" class="txtBad select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad" class="txtBad controldisable select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1299,19 +1299,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good1*@
-                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost1*@
-                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair1*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad1*@
-                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1357,19 +1357,19 @@
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Good2*@
-                                    <input type="text" id="txtGood2" class="txtGood2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtGood2" class="txtGood2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Lost2*@
-                                    <input type="text" id="txtLost2" class="txtLost2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtLost2" class="txtLost2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Repair2*@
-                                    <input type="text" id="txtRepair2" class="txtRepair2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtRepair2" class="txtRepair2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn">
                                     @*Return Bad2*@
-                                    <input type="text" id="txtBad2" class="txtBad2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
+                                    <input type="text" id="txtBad2" class="txtBad2 controldisable2 select-size50-height23 " onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" value="0" />
                                 </td>
                                 <td class="mnReturn hidecolumn">
                                     @*Return Qty1*@
@@ -1391,7 +1391,7 @@
                 </div>
             </div>
             @*<button id="add-row2" class="btn btn-primary" onclick="SetRowIndex()" onblur="SetRowIndex()" onmouseout="AddrowManpower()">Add Row</button>*@
-            <a id="add-row11" href="#" onclick="SetRowIndex()" onblur="SetRowIndex()" onmouseout="AddrowRequisition()">+ Add Row</a>
+            <a id="add-row11" href="#" onclick="SetRowIndex()" onblur="SetRowIndex()" onmouseout="AddrowRequisition2()">+ Add Row</a>
         </div>
         @*RequisitionOther End*@
         <ul class="form-style-1">
@@ -1460,7 +1460,9 @@
             html += '<h4 class="modal-title">Requisition & Return</h4>';
             html += '</div>';
             html += '<div class="modal-body modal-body-danger">จำนวนที่คืนจะต้องเท่ากับจำนวนที่เบิก กรุณาใส่ข้อมูลให้ถูกต้อง</br></br></div>';
-            html += '</div></div>';
+            html += '<div class="modal-footer">';
+            html += '<button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>';
+            html += '</div></div></div>';
             document.getElementById("ShowDialog").innerHTML = html;
         }
     }
