--- a/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/EditJobOrder.cshtml
@@ -485,7 +485,7 @@
                                                         <th rowspan="3" class="hidecolumn">JobID</th>
                                                         <th rowspan="3" class="hidecolumn">Position</th>
                                                         <th rowspan="3">ชื่อ</th>
-                                                        <th rowspan="3">Lead</th>
+                                                        <th rowspan="3">Man Job</th>
                                                         @*<th rowspan="3">Tech</th>
                                                         <th rowspan="3">Safety</th>*@
                                                         <th rowspan="3">Unit Price</th>
