--- a/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
+++ b/Alpha/AlphaMvc/Views/Products/CreateProducts.cshtml
@@ -35,7 +35,7 @@
                     <div class="row">
                         <div class="col-xs-4 col-sm-3 col-lg-2">
                             <div class="form-group">
-                                <label for="txtSerialNo">Serial Number:<span class="required">*</span></label>
+                                <label for="txtSerialNo">Serial Number:</label>
                                 <input type="text" id="txtSerialNo" class="form-control" placeholder="" autofocus required />
                             </div>
                         </div>
@@ -116,7 +116,7 @@
                         <div class="col-xs-4 col-sm-3 col-lg-2">
                             <div class="form-group">
                                 <label for="txtLifetime">อายุใช้งาน (ปี):</label>
-                                <input type="text" id="txtLifetime" class="form-control" placeholder="" />
+                                <input type="text" id="txtLifetime" class="form-control txtsize80" onkeypress="return event.charCode >= 48 && event.charCode <= 57 || event.charCode == 110" placeholder="" />
                             </div>
                         </div>
                         <div class="col-xs-4 col-sm-3 col-lg-2">
