--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -60,10 +60,10 @@
             <div>
                 @*<a href="@Url.Action("Index", "Home")" class="imagelogo"></a>*@
                 @*<img src="@Url.Content("~/Images/user.png")" alt="IMAGES" class="imglogon" />*@
-                <label id="lblUserName" class="logonname"></label>
-                @*<img src="@Url.Content("~/Images/log-in.png")" alt="IMAGES" class="imgicon" />*@
-                <div class="loginname">@Html.ActionLink("Log Out", "IndexLogin", "Login")</div>
-                @*<div class="table-responsive">*@
+                <label class="logonUser">User:</label> <label id="lblUserName" class="logonname"></label>
+                    @*<img src="@Url.Content("~/Images/log-in.png")" alt="IMAGES" class="imgicon" />*@
+                    <div class="loginname">@Html.ActionLink("Log Out", "IndexLogin", "Login")</div>
+                    @*<div class="table-responsive">*@
                     <div class="menulocation">
                         <table border="0" align="center" cellpadding="0" cellspacing="0">
                             <tr>
@@ -159,8 +159,8 @@
                                                         @Html.ActionLink("Requisition", "IndexRptBorrow", "ReportBorrow")
                                                     </li>
                                                     @*<li id="subRptJobPayment">
-                                                        @Html.ActionLink("Job Payment", "IndexRptJobPayment", "ReportJobPayment")
-                                                    </li>*@
+                                                @Html.ActionLink("Job Payment", "IndexRptJobPayment", "ReportJobPayment")
+                                            </li>*@
                                                 </ul>
                                             </li>
                                         </ul>
@@ -170,8 +170,8 @@
                             </tr>
                         </table>
                     </div>
-                @*</div>*@
-            </div>
+                    @*</div>*@
+</div>
         </header>
         <div id="body">
             <section class="content-wrapper main-content clear-fix">     
