--- a/Alpha/AlphaMvc/Reports/RptJobPayment.rdlc
+++ b/Alpha/AlphaMvc/Reports/RptJobPayment.rdlc
@@ -26,7 +26,7 @@
         <Top>0.09444in</Top>
         <Left>0.09583in</Left>
         <Height>0.27674in</Height>
-        <Width>12.47852in</Width>
+        <Width>11.31213in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -135,28 +135,28 @@
               <Width>2.5cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.07234cm</Width>
+              <Width>0.72838cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.04955cm</Width>
+              <Width>0.73205cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.04488cm</Width>
+              <Width>0.75384cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.00173cm</Width>
+              <Width>0.71069cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.05172cm</Width>
+              <Width>0.86651cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.98027cm</Width>
+              <Width>0.92735cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.01159cm</Width>
+              <Width>0.72055cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>0.99188cm</Width>
+              <Width>0.83313cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>1.32238cm</Width>
@@ -165,19 +165,19 @@
               <Width>1.12417cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.09762cm</Width>
+              <Width>0.78012cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.01833cm</Width>
+              <Width>0.70155cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.07125cm</Width>
+              <Width>0.9125cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.04479cm</Width>
+              <Width>0.9125cm</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.01833cm</Width>
+              <Width>0.9125cm</Width>
             </TablixColumn>
             <TablixColumn>
               <Width>2.6538cm</Width>
@@ -670,8 +670,8 @@
                           <Style>None</Style>
                         </Border>
                         <BottomBorder>
-                          <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Color>White</Color>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -718,8 +718,8 @@
                           <Style>None</Style>
                         </Border>
                         <BottomBorder>
-                          <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Color>White</Color>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -767,7 +767,7 @@
                         </Border>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -819,7 +819,7 @@
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -871,7 +871,7 @@
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -919,11 +919,11 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -971,11 +971,11 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -1023,11 +1023,11 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -1605,7 +1605,7 @@
                         </Border>
                         <BottomBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </BottomBorder>
                         <LeftBorder>
                           <Color>Black</Color>
@@ -1802,7 +1802,7 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
@@ -1854,7 +1854,7 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
@@ -1906,7 +1906,7 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
@@ -1958,7 +1958,7 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
@@ -2010,7 +2010,7 @@
                         </Border>
                         <TopBorder>
                           <Color>Black</Color>
-                          <Style>Solid</Style>
+                          <Style>None</Style>
                         </TopBorder>
                         <BottomBorder>
                           <Color>Black</Color>
@@ -4122,7 +4122,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -4192,7 +4192,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -4262,7 +4262,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -4728,7 +4728,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Center</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -4979,7 +4979,7 @@
         <Top>2.26166cm</Top>
         <Left>0.24342cm</Left>
         <Height>4.10271cm</Height>
-        <Width>31.69542cm</Width>
+        <Width>28.73279cm</Width>
         <ZIndex>3</ZIndex>
         <Style>
           <Border>
@@ -5134,7 +5134,7 @@
       </Border>
     </Style>
   </Body>
-  <Width>32.10357cm</Width>
+  <Width>29.19315cm</Width>
   <Page>
     <PageHeader>
       <Height>2.54cm</Height>
@@ -5145,7 +5145,7 @@
           <Top>2.41142cm</Top>
           <Left>0.1436cm</Left>
           <Height>0cm</Height>
-          <Width>19.97018cm</Width>
+          <Width>28.83261cm</Width>
           <Style>
             <Border>
               <Style>Solid</Style>
@@ -5271,7 +5271,7 @@
           <Top>0.17639cm</Top>
           <Left>0.24342cm</Left>
           <Height>0.6cm</Height>
-          <Width>31.69542cm</Width>
+          <Width>28.73279cm</Width>
           <Style>
             <Border>
               <Style>None</Style>
