--- a/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
+++ b/Alpha/AlphaMvc/Views/Requisition/EditRequisition.cshtml
@@ -1460,7 +1460,7 @@
             html += '<h4 class="modal-title">Requisition & Return</h4>';
             html += '</div>';
             html += '<div class="modal-body modal-body-danger">จำนวนที่คืนจะต้องเท่ากับจำนวนที่เบิก กรุณาใส่ข้อมูลให้ถูกต้อง</br></br></div>';
-            html += '<div class="modal-footer">';
+            html += '<div class="modal-footer-danger">';
             html += '<button type="button" class="btn btn-danger" data-dismiss="modal">OK</button>';
             html += '</div></div></div>';
             document.getElementById("ShowDialog").innerHTML = html;
