--- a/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
+++ b/Alpha/AlphaMvc/Views/Shared/_Layout.cshtml
@@ -158,9 +158,9 @@
                                                     <li id="subRptRequisition">
                                                         @Html.ActionLink("Requisition", "IndexRptBorrow", "ReportBorrow")
                                                     </li>
-                                                    @*<li id="subRptJobPayment">
-                                                @Html.ActionLink("Job Payment", "IndexRptJobPayment", "ReportJobPayment")
-                                            </li>*@
+                                                    <li id="subRptJobPayment">
+                                                        @Html.ActionLink("Job Payment", "IndexRptJobPayment", "ReportJobPayment")
+                                                    </li>
                                                 </ul>
                                             </li>
                                         </ul>
