--- a/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
+++ b/Alpha/AlphaMvc/Views/Home/DashBoard.cshtml
@@ -13,7 +13,9 @@
 
 
 <script>
+
 function GetDetail(currentMonth) {
+
     //Set defaultDate
     var today = new Date();
     var dd = today.getDate();
@@ -185,6 +187,7 @@ function GetDetailManPower(currentMonth) {
 }
 
 $(document).ready(function () {
+    CheckAuthorization();
     var currentDate = new Date();
     var currentMonth = currentDate.getMonth() + 1;
     $('#calendar').addClass('table-responsive');
@@ -219,7 +222,7 @@ $(document).ready(function () {
         currentMonth = parseInt(currentMonth.format('M'));
         GetDetailManPower(currentMonth);
     });
-    CheckAuthorization();
+    //CheckAuthorization();
 });
 </script>
 <style>
